tests/baselines/reference/invalidTryStatements2.errors.txt
==== tests/cases/conformance/statements/tryStatements/invalidTryStatements2.ts (5 errors) ====
    function fn() {
        try {
        } catch { // syntax error, missing '(x)'
                ~
!!! '(' expected.
        }
    
        catch(x) { } // error missing try
        ~~~~~
!!! Statement expected.
                 ~
!!! ';' expected.
              ~
!!! Cannot find name 'x'.
    
        finally{ } // error missing try
        ~~~~~~~
!!! Statement expected.
    }